--- a/env.sample
+++ b/env.sample
@@ -48,9 +48,11 @@ PHP72_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,socket
 
 #################### PHP5.6 ####################
 #支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote。如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
-PHP72_VERSION=5.6.40-fpm-alpine
+PHP56_VERSION=5.6.40-fpm-alpine
 PHP56_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp
 
+#################### SUPERVISOR #####################
+SUPERVISORD_INSTALL=true
 
 #################### SWOOLE ####################
 # 如果要更换swoole版本，请把swoole压缩包下载到dockerfile/php/extensions目录，并替换下面的名称
