--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -10,7 +10,7 @@ services:
       - "${NGINX_HTTPS_HOST_PORT}:443"
     volumes:
       - ${SOURCE_DIR}:/var/www/html/:rw
-      - ${CONF_DIR}/nginx/conf.d:/etc/nginx/conf.d/:rw
+      - ${CONF_DIR}/nginx/conf.d:/etc/nginx/conf.d:rw
       - ${CONF_DIR}/nginx/vhost:/etc/nginx/vhost:rw
       - ${CONF_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ${LOG_DIR}/nginx:/var/log/nginx/:rw
@@ -27,7 +27,7 @@ services:
         PHP_EXTENSIONS: ${PHP72_EXTENSIONS}
         MORE_EXTENSION_INSTALLER: php72.sh
         SWOOLE_VERSION: ${PHP7_SWOOLE_VERSION}
-        SUPERVIOSORD_INSTALL: ${SUPERVIOSORD_INSTALL}
+        SUPERVISORD_INSTALL: ${SUPERVISORD_INSTALL}
     ports:
       - "${PHP72_SWOFT_HOST_PORT}:18306"
       - "${PHP72_HYPERF_HOST_PORT}:9501"
