--- a/dockerfile/redis/Dockerfile
+++ b/dockerfile/redis/Dockerfile
@@ -1,2 +1,9 @@
 ARG REDIS_VERSION
 FROM redis:${REDIS_VERSION}
+
+# apk update && install bash
+RUN apk update \
+        && apk upgrade \
+        && apk add --no-cache bash bash-doc bash-completion \
+        && rm -rf /var/cache/apk/* \
+        && /bin/bash
