--- a/dockerfile/php/Dockerfile
+++ b/dockerfile/php/Dockerfile
@@ -5,7 +5,7 @@ ARG PHP_EXTENSIONS
 ARG MORE_EXTENSION_INSTALLER
 ARG ALPINE_REPOSITORIES
 ARG SWOOLE_VERSION
-ARG SUPERVIOSORD_INSTALL
+ARG SUPERVISORD_INSTALL
 
 # Install composer
 RUN cd /home
@@ -25,7 +25,7 @@ WORKDIR /tmp/extensions
 #使用$(nproc)会出现错误，现在还找不到解决方法，下面的数值是你的cpu核数
 ENV MC="-j4"
 ENV EXTENSIONS=",${PHP_EXTENSIONS},"
-ENV SUPERVIOSORD_INSTALL="${SUPERVIOSORD_INSTALL}"
+ENV SUPERVISORD_INSTALL="${SUPERVISORD_INSTALL}"
 
 RUN chmod +x install.sh && chmod +x "${MORE_EXTENSION_INSTALLER}" && chmod +x supervisord.sh
 RUN sh install.sh && sh "${MORE_EXTENSION_INSTALLER}" && sh supervisord.sh
