--- a/env.sample
+++ b/env.sample
@@ -51,7 +51,7 @@ PHP72_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,socket
 PHP56_VERSION=5.6.40-fpm-alpine
 PHP56_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp
 
-#################### SUPERVISOR #####################
+#################### SUPERVISORD #####################
 SUPERVISORD_INSTALL=true
 
 #################### SWOOLE ####################
