--- a/env.sample
+++ b/env.sample
@@ -1,21 +1,19 @@
 ################################################
 ###       environment config file            ###
 ################################################
-# 这里可以映射自己常用的目录，看个人喜好
-SOURCE_DIR=./www
-LOG_DIR=./log
-DATA_DIR=./data
-CONF_DIR=./conf
-
-
-############# PHP Alpine Repositories ############
-ALPINE_REPOSITORIES=mirrors.aliyun.com
-
+# php项目代码存放路径，一般映射在宿主机/app目录下
+CODE_PATH=/app/www
+# 各个服务软件的数据备份，比如mysql、redis等等，防止容器挂后数据不见的问题
+DATA_PATH=/app/data
+# 各个服务的配置,放在当前目录下每个服务目录的conf目录中
+CONF_PATH=./
+# 各个服务的log
+LOG_PATH=/app/log
 
 #################### Nginx #####################
-#nginx版本
+# nginx版本
 NGINX_VERSION=1.15.7-alpine
-#开放端口
+# 开放端口
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
 
@@ -31,39 +29,42 @@ NGINX_HTTPS_HOST_PORT=443
 # redis,memcached,xdebug,swoole,pdo_sqlsrv,sodium,yaf,mysql,
 # amqp
 #
-# 上面是php一些常规的扩展，如果你需要安装，则用英文的逗号分隔填写在PHP72_EXTENSIONS或者PHP56_EXTENSIONS
-#
-＃对于此处未列出的其他扩展，您也可以安装
-＃需要去install.sh、php72.sh、php56.sh脚本脚本中修改扩展
+# 上面是php一些常规的扩展，如果你需要安装，则用英文的逗号分隔填写在PHP_EXTENSIONS
+# 对于此处未列出的其他扩展，您也可以安装
+# 需要去install.sh、php72.sh、php56.sh脚本脚本中修改扩展
 #################### end ####################
 
+#################### PHP ####################
+# PHP Alpine Repositories
+PHP_ALPINE_REPOSITORIES=mirrors.aliyun.com
 
-#################### PHP7.2 ####################
-#支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote。如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
-PHP72_VERSION=7.2-cli-alpine
-PHP72_SWOFT_HOST_PORT=18306
-PHP72_HYPERF_HOST_PORT=9501
-PHP72_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp
+# 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
+# 如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
+# 5.6版本请使用5.6.40-fpm-alpine或者5.6.40-cli-alpine
+PHP_VERSION=7.2-cli-alpine
 
+#映射端口
+PHP_HOST_PORT_9000=9000
+PHP_HOST_PORT_9501=9501
+PHP_HOST_PORT_18306=18306
 
-#################### PHP5.6 ####################
-#支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote。如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
-PHP56_VERSION=5.6.40-fpm-alpine
-PHP56_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp
+# 安装更多的PHP扩展脚本
+PHP_MORE_EXTENSION_INSTALLER=php72.sh
+PHP_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp
 
-#################### SUPERVISORD #####################
-SUPERVISORD_INSTALL=true
+# PHP容器内使用supervisor来管理一些命令,true为安装supervisor
+PHP_SUPERVISORD_INSTALL=true
 
-#################### SWOOLE ####################
-# 如果要更换swoole版本，请把swoole压缩包下载到dockerfile/php/extensions目录，并替换下面的名称
-PHP7_SWOOLE_VERSION=swoole-4.3.6.tar.gz
-PHP5_SWOOLE_VERSION=swoole-2.0.11.tgz
+# PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
+PHP_SWOOLE_VERSION=swoole-4.3.6.tar.gz
+
 
 #################### MySQL #####################
 MYSQL_VERSION=5.7
 MYSQL_HOST_PORT=3306
-#生产环境请替换密码
+# 生产环境请替换密码
 MYSQL_ROOT_PASSWORD=123456
+
 
 #################### MONGODB #####################
 MONGODB_VERSION=4.1
