--- a/nginx/conf/vhost/localhost.conf
+++ b/nginx/conf/vhost/localhost.conf
@@ -20,6 +20,7 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
+        index index.php index.html index.htm;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
