更新文档说明

--- a/env.sample
+++ b/env.sample
@@ -35,8 +35,8 @@ NGINX_HTTPS_HOST_PORT=443
 #################### end ####################
 
 #################### PHP ####################
-# PHP Alpine Repositories
-PHP_ALPINE_REPOSITORIES=mirrors.aliyun.com
+# Alpine Repositories
+ALPINE_REPOSITORIES=mirrors.aliyun.com
 
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
 # 如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
