--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -98,6 +98,7 @@ services:
       args:
         REDIS_VERSION: ${REDIS_VERSION}
         CONF_PATH: ${CONF_PATH}
+        ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
     ports:
       - "${REDIS_HOST_PORT}:6379"
     volumes:
