--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -3,7 +3,7 @@ FROM php:${PHP_VERSION}
 
 ARG PHP_EXTENSIONS
 ARG PHP_MORE_EXTENSION_INSTALLER
-ARG PHP_ALPINE_REPOSITORIES
+ARG ALPINE_REPOSITORIES
 ARG PHP_SWOOLE_VERSION
 ARG PHP_SUPERVISORD_INSTALL
 
