--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -25,7 +25,7 @@ services:
     build:
       context: php
       args:
-        PHP_ALPINE_REPOSITORIES: ${PHP_ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
         PHP_VERSION: ${PHP_VERSION}
         PHP_EXTENSIONS: ${PHP_EXTENSIONS}
         MORE_EXTENSION_INSTALLER: ${MORE_EXTENSION_INSTALLER}
