--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,9 @@
 ARG NGINX_VERSION
 FROM nginx:${NGINX_VERSION}
 
+ARG ALPINE_REPOSITORIES
+
+RUN sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_REPOSITORIES}/g" /etc/apk/repositories
 
 # apk update && install bash
 RUN apk update \
