--- a/env.sample
+++ b/env.sample
@@ -41,7 +41,7 @@ ALPINE_REPOSITORIES=mirrors.aliyun.com
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
 # 如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
 # 5.6版本请使用5.6.40-fpm-alpine或者5.6.40-cli-alpine
-PHP_VERSION=7.2-cli-alpine
+PHP_VERSION=7.2-fpm-alpine
 
 #映射端口
 PHP_HOST_PORT_9000=9000
