--- a/env.sample
+++ b/env.sample
@@ -88,4 +88,7 @@ RABBITMQ_DEFAULT_PASS=mypass
 REDISMYADMIN_VERSION=erikdubbelboer/phpredisadmin:latest
 REDISMYADMIN_HOST_PORT=8081
 
-
+################# nodejs #################
+NODEJS_VERSION=12.8-alpine
+NODEJS_HOST_PORT_3000=3000
+NODEJS_HOST_PORT_8088=8088
