新增event、mogondb扩展 修复时区的问题

--- a/env.sample
+++ b/env.sample
@@ -10,6 +10,11 @@ CONF_PATH=./
 # 各个服务的log
 LOG_PATH=/app/log
 
+
+############# Timezone for the containers ############
+TZ=Asia/Shanghai
+
+
 #################### Nginx #####################
 # nginx版本
 NGINX_VERSION=1.15.7-alpine
@@ -27,7 +32,7 @@ NGINX_HTTPS_HOST_PORT=443
 # gd,intl,bz2,soap,xsl,xmlrpc,wddx,curl,readline,snmp,pspell,
 # recode,tidy,gmp,imap,ldap,imagick,sqlsrv,mcrypt,opcache,
 # redis,memcached,xdebug,swoole,pdo_sqlsrv,sodium,yaf,mysql,
-# amqp
+# amqp,mongodb,event
 #
 # 上面是php一些常规的扩展，如果你需要安装，则用英文的逗号分隔填写在PHP_EXTENSIONS
 # 对于此处未列出的其他扩展，您也可以安装
