--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,20 +1,20 @@
 ARG NODEJS_VERSION
 FROM node:${NODEJS_VERSION}
 
+ARG TZ
 ARG ALPINE_REPOSITORIES
 
 RUN sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_REPOSITORIES}/g" /etc/apk/repositories
 
-# apk update && install bash
+# apk update && install
 RUN apk update \
         && apk upgrade \
-        && apk add --no-cache bash bash-doc bash-completion git python make openssl tar gcc \
-        && rm -rf /var/cache/apk/* \
-        && /bin/bash
+        && apk add --no-cache bash bash-doc bash-completion git python make openssl tar gcc tzdata \
+        && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
+        && echo "$TZ" > /etc/timezone
+        && rm -rf /var/cache/apk/*
 
 RUN npm install -g pm2
-
-ENV TZ="Asia/Shanghai"
 
 EXPOSE 3000
 
