--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,7 @@
 ARG NGINX_VERSION
 FROM nginx:${NGINX_VERSION}
 
+ARG TZ
 ARG ALPINE_REPOSITORIES
 
 RUN sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_REPOSITORIES}/g" /etc/apk/repositories
@@ -8,6 +9,7 @@ RUN sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_REPOSITORIES}/g" /etc/apk/reposito
 # apk update && install bash
 RUN apk update \
         && apk upgrade \
-        && apk add --no-cache bash bash-doc bash-completion \
-        && rm -rf /var/cache/apk/* \
-        && /bin/bash
+        && apk add --no-cache bash bash-doc bash-completion tzdata \
+        && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
+        && echo "$TZ" > /etc/timezone
+        && rm -rf /var/cache/apk/*
