--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -34,7 +34,7 @@ RUN apk update \
         && apk upgrade \
         && apk add --no-cache tzdata \
         && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
-        && echo "$TZ" > /etc/timezone
+        && echo "$TZ" > /etc/timezone \
         && rm -rf /var/cache/apk/*
 
 WORKDIR /var/www/html
