--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -8,5 +8,5 @@ RUN apk update \
         && apk upgrade \
         && apk add --no-cache bash bash-doc bash-completion tzdata \
         && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
-        && echo "$TZ" > /etc/timezone
+        && echo "$TZ" > /etc/timezone \
         && rm -rf /var/cache/apk/*
