--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -8,7 +8,7 @@ RUN chmod 777 -R /var/log/
 # apk update && install
 RUN apk update \
         && apk upgrade \
-        && apk add --no-cache bash bash-doc bash-completion tzdata \
+        && apk add tzdata \
         && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
         && echo "$TZ" > /etc/timezone \
         && rm -rf /var/cache/apk/*
