--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -6,7 +6,7 @@ ARG TZ
 # apk update && install
 RUN apk update \
         && apk upgrade \
-        && apk add --no-cache bash bash-doc bash-completion tzdata \
+        && apk add --no-cache tzdata \
         && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
         && echo "$TZ" > /etc/timezone \
         && rm -rf /var/cache/apk/*
