--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -117,13 +117,13 @@ services:
       context: rabbitmq
       args:
         RABBITMQ_VERSION: ${RABBITMQ_VERSION}
-        TZ: ${TZ}
     ports:
       - "${RABBITMQ_HOST_PORT_C}:5672"
       - "${RABBITMQ_HOST_PORT_S}:15672"
     environment:
-      - RABBITMQ_DEFAULT_USER="${RABBITMQ_DEFAULT_USER}"
-      - RABBITMQ_DEFAULT_PASS="${RABBITMQ_DEFAULT_PASS}"
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_DEFAULT_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_DEFAULT_PASS}"
+      TZ: "${TZ}"
     volumes:
       - ${LOG_PATH}/rabbitmq:/var/log/rabbitmq:rw
       - ${DATA_PATH}/rabbitmq:/var/lib/rabbitmq:rw
@@ -143,8 +143,8 @@ services:
     ports:
       - "${REDISMYADMIN_HOST_PORT}:80"
     environment:
-      - REDIS_1_HOST=redis
-      - REDIS_1_PORT=6379
+      REDIS_1_HOST: "redis"
+      REDIS_1_PORT: "6379"
     networks:
       - dcnmp
 
@@ -160,7 +160,6 @@ services:
       - "${NODEJS_HOST_PORT_8088}:8088"
     volumes:
       - ${CODE_PATH}:/var/www/html/:rw
-
     restart: always
     stdin_open: true
     tty: true
