变更nodejs镜像类型

--- a/env.sample
+++ b/env.sample
@@ -94,6 +94,7 @@ REDISMYADMIN_VERSION=erikdubbelboer/phpredisadmin:latest
 REDISMYADMIN_HOST_PORT=8081
 
 ################# nodejs #################
-NODEJS_VERSION=12.8-alpine
+# 经过测试，不建议用基于alpine的镜像，如果项目用的不深可以使用，用的深建议不要用，可能会采坑
+NODEJS_VERSION=12.8
 NODEJS_HOST_PORT_3000=3000
 NODEJS_HOST_PORT_8088=8088
