--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -154,7 +154,8 @@ services:
       args:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
         NODEJS_VERSION: ${NODEJS_VERSION}
-        TZ: ${TZ}
+    environment:
+      TZ: "${TZ}"
     ports:
       - "${NODEJS_HOST_PORT_3000}:3000"
       - "${NODEJS_HOST_PORT_8088}:8088"
