--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,6 +1,20 @@
 ARG NODEJS_VERSION
 FROM node:${NODEJS_VERSION}
 
+ARG TZ
+ARG ALPINE_REPOSITORIES
+
+ENV TZ=${TZ}
+
+RUN sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_REPOSITORIES}/g" /etc/apk/repositories
+
+# apk update && install
+RUN apk update \
+        && apk add --no-cache bash bash-doc bash-completion git python make openssl tar gcc g++ tzdata \
+        && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
+        && echo "$TZ" > /etc/timezone \
+        && rm -rf /var/cache/apk/*
+
 #解决低镜像的权限问题
 RUN npm config set unsafe-perm true
 
