--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -18,9 +18,10 @@ RUN chmod +x /usr/local/bin/composer
 
 COPY extensions /tmp/extensions
 COPY sh /tmp/extensions
+COPY soft /var/local/soft
 WORKDIR /tmp/extensions
 
-#使用$(nproc)会出现错误，现在还找不到解决方法，下面的数值是你的cpu核数
+#使用$(nproc)在mac下会出现错误，现在还找不到解决方法，下面的数值是你的cpu核数，linux环境可以直接用
 ENV MC="-j4"
 ENV EXTENSIONS=",${PHP_EXTENSIONS},"
 
@@ -28,6 +29,11 @@ RUN chmod +x install.sh && chmod +x "${PHP_MORE_EXTENSION_INSTALLER}" && chmod +
 RUN sh install.sh && sh "${PHP_MORE_EXTENSION_INSTALLER}" && sh supervisord.sh
 
 RUN rm -rf /tmp/extensions
+
+# 处理监控文件变化的软件
+RUN mv /var/local/soft/swoolefor.phar /usr/local/bin/swoolefor
+RUN chmod +x /usr/local/bin/swoolefor
+RUN echo "alias swoolefor='php /usr/local/bin/swoolefor'" >> ~/.bashrc && source ~/.bashrc
 
 # apk update && install
 RUN apk update \
