--- a/env.sample
+++ b/env.sample
@@ -32,7 +32,7 @@ NGINX_HTTPS_HOST_PORT=443
 # gd,intl,bz2,soap,xsl,xmlrpc,wddx,curl,readline,snmp,pspell,
 # recode,tidy,gmp,imap,ldap,imagick,sqlsrv,mcrypt,opcache,
 # redis,memcached,xdebug,swoole,pdo_sqlsrv,sodium,yaf,mysql,
-# amqp,mongodb,event
+# amqp,mongodb,event,inotify
 #
 # 上面是php一些常规的扩展，如果你需要安装，则用英文的逗号分隔填写在PHP_EXTENSIONS
 # 对于此处未列出的其他扩展，您也可以安装
@@ -55,7 +55,7 @@ PHP_HOST_PORT_18306=18306
 
 # 安装更多的PHP扩展脚本
 PHP_MORE_EXTENSION_INSTALLER=php72.sh
-PHP_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp
+PHP_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp,inotify
 
 # PHP容器内使用supervisor来管理一些命令,true为安装supervisor
 PHP_SUPERVISORD_INSTALL=true
