--- a/nginx/conf/vhost/localhost_https.conf
+++ b/nginx/conf/vhost/localhost_https.conf
@@ -1,7 +1,7 @@
 server {
     listen       443 ssl http2;
     server_name  localhost;
-    root   /var/www/html/localhost;
+    root   /app/www/localhost;
     index  index.php index.html index.htm;
     #charset koi8-r;
 
