--- a/env.sample
+++ b/env.sample
@@ -25,14 +25,15 @@ NGINX_HTTPS_HOST_PORT=443
 
 ############ PHP extensions #################
 # PHP extensions:
-#
 # pdo_mysql,zip,pcntl,mysqli,mbstring,exif,bcmath,calendar,
 # sockets,gettext,shmop,sysvmsg,sysvsem,sysvshm,pdo_rebird,
 # pdo_dblib,pdo_oci,pdo_odbc,pdo_pgsql,pgsql,oci8,odbc,dba,
 # gd,intl,bz2,soap,xsl,xmlrpc,wddx,curl,readline,snmp,pspell,
 # recode,tidy,gmp,imap,ldap,imagick,sqlsrv,mcrypt,opcache,
 # redis,memcached,xdebug,swoole,pdo_sqlsrv,sodium,yaf,mysql,
-# amqp,mongodb,event,inotify
+# amqp,mongodb,event,rar,ast,yac,yaconf,msgpack,igbinary,
+# seaslog,varnish
+
 #
 # 上面是php一些常规的扩展，如果你需要安装，则用英文的逗号分隔填写在PHP_EXTENSIONS
 # 对于此处未列出的其他扩展，您也可以安装
@@ -40,6 +41,14 @@ NGINX_HTTPS_HOST_PORT=443
 #################### end ####################
 
 #################### PHP ####################
+#
+# Container package fetch url
+#
+# Can be empty, followings or others:
+# mirrors.163.com
+# mirrors.aliyun.com
+# mirrors.ustc.edu.cn
+#
 # Alpine Repositories
 ALPINE_REPOSITORIES=mirrors.aliyun.com
 
@@ -61,7 +70,25 @@ PHP_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,
 PHP_SUPERVISORD_INSTALL=false
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP_SWOOLE_VERSION=swoole-4.4.4.tar.gz
+PHP_SWOOLE_VERSION=swoole-4.4.12.tar.gz
+
+#################### PHP73 ####################
+
+# 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
+# 如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
+# 5.6版本请使用5.6.40-fpm-alpine或者5.6.40-cli-alpine
+PHP73_VERSION=7.3-fpm-alpine
+
+#映射端口
+PHP73_HOST_PORT_9001=9001
+PHP73_HOST_PORT_9502=9502
+
+# 安装更多的PHP扩展脚本
+PHP73_MORE_EXTENSION_INSTALLER=php73.sh
+PHP73_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp,inotify
+
+# PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
+PHP73_SWOOLE_VERSION=swoole-4.4.12.tar.gz
 
 
 #################### MySQL #####################
