从新构建过php镜像，支持alpine和debian系统

--- a/docker-compose-php.yml
+++ b/docker-compose-php.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   nginx:
+    container_name: dcnmp_nginx
     build:
       context: nginx
       args:
@@ -22,7 +23,8 @@ services:
     networks:
       - dcnmp
 
-  php72:
+  php:
+    container_name: dcnmp_php
     build:
       context: php
       args:
@@ -31,10 +33,12 @@ services:
         PHP_EXTENSIONS: ${PHP_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
         PHP_SWOOLE_VERSION: ${PHP_SWOOLE_VERSION}
+        PHP_REPLACE_SOURCE: ${PHP_REPLACE_SOURCE}
         TZ: ${TZ}
     ports:
       - "${PHP_HOST_PORT_9000}:9000"
       - "${PHP_HOST_PORT_9501}:9501"
+      - "${PHP_HOST_PORT_9502}:9502"
       - "${PHP_HOST_PORT_18306}:18306"
     volumes:
       - ${CODE_PATH}:/app/www/:rw
@@ -49,33 +53,8 @@ services:
     networks:
       - dcnmp
 
-  php73:
-    build:
-      context: php73
-      args:
-        ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
-        PHP_VERSION: ${PHP73_VERSION}
-        PHP_EXTENSIONS: ${PHP73_EXTENSIONS}
-        PHP_MORE_EXTENSION_INSTALLER: ${PHP73_MORE_EXTENSION_INSTALLER}
-        PHP_SWOOLE_VERSION: ${PHP73_SWOOLE_VERSION}
-        TZ: ${TZ}
-    ports:
-      - "${PHP73_HOST_PORT_9001}:9000"
-      - "${PHP73_HOST_PORT_9502}:9502"
-    volumes:
-      - ${CODE_PATH}:/app/www/:rw
-      - ${CONF_PATH}/php73/conf/php.ini:/usr/local/etc/php/php.ini:ro
-      - ${CONF_PATH}/php73/conf/php-fpm.conf:/usr/local/etc/php-fpm.d/www.conf:rw
-      - ${LOG_PATH}/${PHP73_VERSION}:/var/log/php:rw
-    restart: always
-    stdin_open: true
-    tty: true
-    cap_add:
-      - SYS_PTRACE
-    networks:
-      - dcnmp
-
   mysql:
+    container_name: dcnmp_mysql
     build:
       context: mysql
       args:
@@ -94,6 +73,7 @@ services:
       - dcnmp
 
   mongodb:
+    container_name: dcnmp_mongodb
     build:
       context: mongodb
       args:
@@ -116,11 +96,13 @@ services:
       --auth
 
   redis:
+    container_name: dcnmp_redis
     build:
       context: redis
       args:
         REDIS_VERSION: ${REDIS_VERSION}
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        REDIS_EXTENSION_VERSION: ${REDIS_EXTENSION_VERSION}
         TZ: ${TZ}
     ports:
       - "${REDIS_HOST_PORT}:6379"
@@ -131,6 +113,29 @@ services:
     stdin_open: true
     tty: true
     entrypoint: ["redis-server", "/etc/redis.conf"]
+    networks:
+      - dcnmp
+
+  rabbitmq:
+    container_name: dcnmp_rabbitmq
+    build:
+      context: rabbitmq
+      args:
+        RABBITMQ_VERSION: ${RABBITMQ_VERSION}
+    ports:
+      - "${RABBITMQ_HOST_PORT_C}:5672"
+      - "${RABBITMQ_HOST_PORT_S}:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_DEFAULT_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_DEFAULT_PASS}"
+      TZ: "${TZ}"
+    volumes:
+      - ${LOG_PATH}/rabbitmq:/var/log/rabbitmq:rw
+      - ${DATA_PATH}/rabbitmq:/var/lib/rabbitmq:rw
+
+    stdin_open: true
+    tty: true
+    restart: always
     networks:
       - dcnmp
 
