--- a/env.sample
+++ b/env.sample
@@ -29,15 +29,15 @@ NGINX_HTTPS_HOST_PORT=443
 # sockets,gettext,shmop,sysvmsg,sysvsem,sysvshm,pdo_rebird,
 # pdo_dblib,pdo_oci,pdo_odbc,pdo_pgsql,pgsql,oci8,odbc,dba,
 # gd,intl,bz2,soap,xsl,xmlrpc,wddx,curl,readline,snmp,pspell,
-# recode,tidy,gmp,imap,ldap,imagick,sqlsrv,mcrypt,opcache,
-# redis,memcached,xdebug,swoole,pdo_sqlsrv,sodium,yaf,mysql,
-# amqp,mongodb,event,rar,ast,yac,yaconf,msgpack,igbinary,
-# seaslog,varnish
+# recode,tidy,gmp,imap,ldap,imagick,sqlsrv,pdo_sqlsrv,opcache,
+# redis,memcached,xdebug,swoole,sodium,yaf,amqp,mongodb,
+# event,rar,ast,yac,yaconf,msgpack,igbinary,seaslog,varnish,
+# xhprof,xlswriter
 
 #
 # 上面是php一些常规的扩展，如果你需要安装，则用英文的逗号分隔填写在PHP_EXTENSIONS
 # 对于此处未列出的其他扩展，您也可以安装
-# 需要去install.sh、php72.sh、php56.sh脚本脚本中修改扩展
+# 需要去sh目录修改脚本
 #################### end ####################
 
 #################### PHP ####################
@@ -53,50 +53,61 @@ NGINX_HTTPS_HOST_PORT=443
 ALPINE_REPOSITORIES=mirrors.aliyun.com
 
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
-# 如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
-# 5.6版本请使用5.6.40-fpm-alpine或者5.6.40-cli-alpine
-PHP_VERSION=7.2-fpm-alpine
+# 如果你用swoole不需要php-fpm的话，可以使用7.3-cli-alpine，如果需要php-fpm则用7.3-fpm-alpine
+# 不再支持5和7.0版本，如果要使用5和7.0可能会有点问题，建议使用7.2以上的版本，性能有大幅度提升，也修复了很多bug
+# php官方镜像主要是根据两种系统来进行打包
+# 1、alpine 2、debian
+# 如果你是常规开发，没有大量用到c标准的一些动态库，建议使用alpine，反之使用debian
+# 例如：使用alpine的则直接在PHP_VERSION中填写7.3-fpm-alpine，如果使用debian则为7.3-fpm
+PHP_VERSION=7.3-fpm-alpine
 
 #映射端口
 PHP_HOST_PORT_9000=9000
 PHP_HOST_PORT_9501=9501
+PHP_HOST_PORT_9502=9502
 PHP_HOST_PORT_18306=18306
 
-# 安装更多的PHP扩展脚本
-PHP_MORE_EXTENSION_INSTALLER=php72.sh
-PHP_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp,inotify
-
-# PHP容器内使用supervisor来管理一些命令,true为安装supervisor
-PHP_SUPERVISORD_INSTALL=false
+# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
+PHP_MORE_EXTENSION_INSTALLER=alpine.sh
+PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP_SWOOLE_VERSION=swoole-4.4.12.tar.gz
+PHP_SWOOLE_VERSION=swoole-4.4.12.tgz
 
-#################### PHP73 ####################
+# 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
+PHP_REPLACE_SOURCE=true
 
+#################### PHP7 支持安装多个镜像 ####################
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
-# 如果你用swoole不需要php-fpm的话，可以使用7.2-cli-alpine，如果需要php-fpm则用7.2-fpm-alpine
-# 5.6版本请使用5.6.40-fpm-alpine或者5.6.40-cli-alpine
-PHP73_VERSION=7.3-fpm-alpine
+# 如果你用swoole不需要php-fpm的话，可以使用7.3-cli-alpine，如果需要php-fpm则用7.3-fpm-alpine
+# 不再支持5和7.0版本，如果要使用5和7.0可能会有点问题，建议使用7.2以上的版本，性能有大幅度提升，也修复了很多bug
+# php官方镜像主要是根据两种系统来进行打包
+# 1、alpine 2、debian
+# 如果你是常规开发，没有大量用到c标准的一些动态库，建议使用alpine，反之使用debian
+# 例如：使用alpine的则直接在PHP_VERSION中填写7.3-fpm-alpine，如果使用debian则为7.3-fpm
+PHP7_VERSION=7.3-fpm
 
 #映射端口
-PHP73_HOST_PORT_9001=9001
-PHP73_HOST_PORT_9502=9502
+PHP7_HOST_PORT_9001=9001
+PHP7_HOST_PORT_9503=9503
+PHP7_HOST_PORT_9504=9504
+PHP7_HOST_PORT_18307=18307
 
-# 安装更多的PHP扩展脚本
-PHP73_MORE_EXTENSION_INSTALLER=php73.sh
-PHP73_EXTENSIONS=pdo_mysql,opcache,redis,zip,pcntl,mysqli,mbstring,bcmath,sockets,sysvmsg,sysvsem,sysvshm,pdo_pgsql,pgsql,gd,bz2,curl,mcrypt,memcached,swoole,amqp,inotify
+# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
+PHP7_MORE_EXTENSION_INSTALLER=debian.sh
+PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP73_SWOOLE_VERSION=swoole-4.4.12.tar.gz
+PHP7_SWOOLE_VERSION=swoole-4.4.12.tgz
 
+# 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
+PHP7_REPLACE_SOURCE=true
 
 #################### MySQL #####################
 MYSQL_VERSION=5.7
 MYSQL_HOST_PORT=3306
 # 生产环境请替换密码
 MYSQL_ROOT_PASSWORD=123456
-
 
 #################### MONGODB #####################
 MONGODB_VERSION=4.1
@@ -115,12 +126,11 @@ RABBITMQ_HOST_PORT_S=15672
 RABBITMQ_DEFAULT_USER=myuser
 RABBITMQ_DEFAULT_PASS=mypass
 
-
 ################# redisMyAdmin #################
 REDISMYADMIN_VERSION=erikdubbelboer/phpredisadmin:latest
 REDISMYADMIN_HOST_PORT=8081
 
 ################# nodejs #################
-NODEJS_VERSION=alpine
+NODEJS_VERSION=13.2-alpine
 NODEJS_HOST_PORT_3000=3000
 NODEJS_HOST_PORT_8088=8088
