--- a/docker-compose-node.yml
+++ b/docker-compose-node.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   nginx:
+    container_name: dcnmp_nginx
     build:
       context: nginx
       args:
@@ -23,6 +24,7 @@ services:
       - dcnmp
 
   mongodb:
+    container_name: dcnmp_mongodb
     build:
       context: mongodb
       args:
@@ -44,26 +46,8 @@ services:
     command:
       --auth
 
-  redis:
-    build:
-      context: redis
-      args:
-        REDIS_VERSION: ${REDIS_VERSION}
-        ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
-        TZ: ${TZ}
-    ports:
-      - "${REDIS_HOST_PORT}:6379"
-    volumes:
-      - ${CONF_PATH}/redis/conf/redis.conf:/etc/redis.conf:rw
-      - ${DATA_PATH}/redis:/data:rw
-    restart: always
-    stdin_open: true
-    tty: true
-    entrypoint: ["redis-server", "/etc/redis.conf"]
-    networks:
-      - dcnmp
-
   nodejs:
+    container_name: dcnmp_nodejs
     build:
       context: nodejs
       args:
