--- a/php7/conf/supervisord/supervisord.d/test.ini
+++ b/php7/conf/supervisord/supervisord.d/test.ini
@@ -1,7 +1,7 @@
 # 新建一个应用并设置一个名称，这里设置为 hyperf
-[program:hyperf]
+[program:TmgAdminBE-staging]
 # 这里为您要管理的项目的启动命令，对应您的项目的真实路径
-command=docker exec -i -w /app/www/hyperf tmg_dcnmp_php72_1 php /app/www/hyperf/bin/hyperf.php start
+command=docker exec -i -w /app/www/TmgAdminBE-staging dcnmp_php73_1 php /app/www/TmgAdminBE-staging/bin/hyperf.php start
 user=root
 # supervisor 启动时自动该应用
 autostart=true
@@ -12,6 +12,6 @@ startsecs=8
 # 重试次数
 startretries=3
 # stderr 日志输出位置
-stderr_logfile=/app/www/hyperf/runtime/stderr.log
+stderr_logfile=/app/www/TmgAdminBE-staging/runtime/stderr.log
 # stdout 日志输出位置
-stdout_logfile=/app/www/hyperf/runtime/stdout.log
+stdout_logfile=/app/www/TmgAdminBE-staging/runtime/stdout.log
