新增容器安装supervisord参数

--- a/docker-compose-php.yml
+++ b/docker-compose-php.yml
@@ -34,6 +34,7 @@ services:
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
         PHP_SWOOLE_VERSION: ${PHP_SWOOLE_VERSION}
         PHP_REPLACE_SOURCE: ${PHP_REPLACE_SOURCE}
+        PHP_INSTALL_SUPERVISOR: ${PHP_INSTALL_SUPERVISOR}
         TZ: ${TZ}
     ports:
       - "${PHP_HOST_PORT_9000}:9000"
