--- a/env.sample
+++ b/env.sample
@@ -77,6 +77,9 @@ PHP_SWOOLE_VERSION=swoole-4.4.12.tgz
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP_REPLACE_SOURCE=true
 
+# 安装supervisor
+PHP_INSTALL_SUPERVISOR=true
+
 #################### PHP7 支持安装多个镜像 ####################
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
 # 如果你用swoole不需要php-fpm的话，可以使用7.3-cli-alpine，如果需要php-fpm则用7.3-fpm-alpine
@@ -102,6 +105,9 @@ PHP7_SWOOLE_VERSION=swoole-4.4.12.tgz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP7_REPLACE_SOURCE=true
+
+# 安装supervisor
+PHP7_INSTALL_SUPERVISOR=true
 
 #################### MySQL #####################
 MYSQL_VERSION=5.7
