--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -34,6 +34,7 @@ services:
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
         PHP_SWOOLE_VERSION: ${PHP_SWOOLE_VERSION}
         PHP_REPLACE_SOURCE: ${PHP_REPLACE_SOURCE}
+        PHP_INSTALL_SUPERVISOR: ${PHP_INSTALL_SUPERVISOR}
         TZ: ${TZ}
     ports:
       - "${PHP_HOST_PORT_9000}:9000"
@@ -64,6 +65,7 @@ services:
         PHP_MORE_EXTENSION_INSTALLER: ${PHP7_MORE_EXTENSION_INSTALLER}
         PHP_SWOOLE_VERSION: ${PHP7_SWOOLE_VERSION}
         PHP_REPLACE_SOURCE: ${PHP7_REPLACE_SOURCE}
+        PHP_INSTALL_SUPERVISOR: ${PHP7_INSTALL_SUPERVISOR}
         TZ: ${TZ}
     ports:
       - "${PHP7_HOST_PORT_9001}:9001"
