--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -7,6 +7,7 @@ ARG PHP_EXTENSIONS
 ARG PHP_MORE_EXTENSION_INSTALLER
 ARG PHP_SWOOLE_VERSION
 ARG PHP_REPLACE_SOURCE
+ARG PHP_INSTALL_SUPERVISOR
 
 RUN cd /home
 
