--- a/env.sample
+++ b/env.sample
@@ -72,7 +72,7 @@ PHP_MORE_EXTENSION_INSTALLER=alpine.sh
 PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP_SWOOLE_VERSION=swoole-4.4.12.tgz
+PHP_SWOOLE_VERSION=swoole-4.4.12.tar.gz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP_REPLACE_SOURCE=true
@@ -101,7 +101,7 @@ PHP7_MORE_EXTENSION_INSTALLER=debian.sh
 PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP7_SWOOLE_VERSION=swoole-4.4.12.tgz
+PHP7_SWOOLE_VERSION=swoole-4.4.12.tar.gz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP7_REPLACE_SOURCE=true
