--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,16 +1,25 @@
 
 user  nginx;
-worker_processes  1;
+worker_processes  2;
 
 pid        /var/run/nginx.pid;
 error_log  /var/log/nginx/nginx.error.log warn;
 
 events {
-    worker_connections  1024;
+    use epoll;
+    multi_accept on;
+    worker_connections  65535;
 }
 
 
 http {
+    server_tokens off;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 50;
+    types_hash_max_size 2048;
+    client_max_body_size 50M;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -18,16 +27,12 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /dev/null;
-    #access_log  /var/log/dnmp/nginx.access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-    client_max_body_size 100M;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
+    access_log /dev/stdout;
+    error_log /dev/stderr;
+    gzip  on;
+    gzip_disable "msie6";
 
     include /etc/nginx/vhost/*.conf;
+
+    charset UTF-8;
 }
