--- a/nginx/conf/vhost/localhost.conf
+++ b/nginx/conf/vhost/localhost.conf
@@ -45,5 +45,11 @@ server {
     #location ~ /\.ht {
     #    deny  all;
     #}
+
+    location ~* ^.+\.(js|ico|gif|jpg|jpeg|png|html|htm)$ {
+        log_not_found off;
+        access_log off;
+        expires 7d;
+    }
 }
 
