--- a/nginx/conf/vhost/localhost_https.conf
+++ b/nginx/conf/vhost/localhost_https.conf
@@ -45,6 +45,12 @@ server {
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
     }
 
+    location ~* ^.+\.(js|ico|gif|jpg|jpeg|png|html|htm)$ {
+        log_not_found off;
+        access_log off;
+        expires 7d;
+    }
+
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
     #
