--- a/env.sample
+++ b/env.sample
@@ -69,16 +69,16 @@ PHP_HOST_PORT_18306=18306
 
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
 PHP_MORE_EXTENSION_INSTALLER=alpine.sh
-PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
+PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,zip
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP_SWOOLE_VERSION=swoole-src-4.4.12.tar.gz
+PHP_SWOOLE_VERSION=swoole-src-4.4.14.tar.gz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP_REPLACE_SOURCE=true
 
 # 安装supervisor
-PHP_INSTALL_SUPERVISOR=true
+PHP_INSTALL_SUPERVISOR=false
 
 #################### PHP7 支持安装多个镜像 ####################
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
@@ -98,16 +98,16 @@ PHP7_HOST_PORT_18307=18307
 
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
 PHP7_MORE_EXTENSION_INSTALLER=debian.sh
-PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
+PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,zip
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP7_SWOOLE_VERSION=swoole-src-4.4.12.tar.gz
+PHP7_SWOOLE_VERSION=swoole-src-4.4.14.tar.gz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP7_REPLACE_SOURCE=true
 
 # 安装supervisor
-PHP7_INSTALL_SUPERVISOR=true
+PHP7_INSTALL_SUPERVISOR=false
 
 #################### MySQL #####################
 MYSQL_VERSION=5.7
