1、新增阿里oss-sdk 2、新增debian系统默认安装阿里oss-sdk需要的依赖

--- a/env.sample
+++ b/env.sample
@@ -109,6 +109,10 @@ PHP7_REPLACE_SOURCE=true
 # 安装supervisor
 PHP7_INSTALL_SUPERVISOR=true
 
+#debian系统安装阿里oss-sdk
+PHP7_INSTALL_ALIYUN_OSS_SDK=false
+PHP7_ALIYUN_OSS_SDK_VERSION=aliyun-oss-c-sdk-3.9.1.tar.gz
+
 #################### MySQL #####################
 MYSQL_VERSION=5.7
 MYSQL_HOST_PORT=3306
