--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -67,6 +67,8 @@ services:
         PHP_SWOOLE_VERSION: ${PHP7_SWOOLE_VERSION}
         PHP_REPLACE_SOURCE: ${PHP7_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP7_INSTALL_SUPERVISOR}
+        PHP_INSTALL_ALIYUN_OSS_SDK: ${PHP7_INSTALL_ALIYUN_OSS_SDK}
+        PHP_ALIYUN_OSS_SDK_VERSION: ${PHP7_ALIYUN_OSS_SDK_VERSION}
         TZ: ${TZ}
     ports:
       - "${PHP7_HOST_PORT_9001}:9001"
