--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -8,6 +8,8 @@ ARG PHP_MORE_EXTENSION_INSTALLER
 ARG PHP_SWOOLE_VERSION
 ARG PHP_REPLACE_SOURCE
 ARG PHP_INSTALL_SUPERVISOR
+ARG PHP_INSTALL_ALIYUN_OSS_SDK
+ARG PHP_ALIYUN_OSS_SDK_VERSION
 
 RUN cd /home
 
@@ -18,6 +20,7 @@ RUN curl -o /usr/bin/composer https://mirrors.aliyun.com/composer/composer.phar 
 
 COPY extensions /tmp/extensions
 COPY sh /tmp/extensions
+COPY sdk /tmp/extensions
 COPY soft /var/local/soft
 COPY source /var/local/source
 WORKDIR /tmp/extensions
