fix:alpine安装zip扩展失败的问题

--- a/env.sample
+++ b/env.sample
@@ -69,7 +69,7 @@ PHP_HOST_PORT_18306=18306
 
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
 PHP_MORE_EXTENSION_INSTALLER=alpine.sh
-PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,zip
+PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
 PHP_SWOOLE_VERSION=swoole-src-4.4.15.tar.gz
@@ -98,7 +98,7 @@ PHP7_HOST_PORT_18307=18307
 
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
 PHP7_MORE_EXTENSION_INSTALLER=debian.sh
-PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,zip
+PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
 PHP7_SWOOLE_VERSION=swoole-src-4.4.15.tar.gz
