--- a/docker-compose-node.yml
+++ b/docker-compose-node.yml
@@ -34,8 +34,9 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: "${MONGODB_INITDB_ROOT_PASSWORD}"
       TZ: "${TZ}"
     volumes:
-      - ${DATA_PATH}/mongo:/data/db:rw
-      - ${DATA_PATH}/mongo/mongo_key:/mongo:rw
+      - ${DATA_PATH}/mongodb:/data/db:rw
+      - ${DATA_PATH}/mongodb/mongo_key:/mongo:rw
+      - ${LOG_PATH}/mongodb:/var/log/mongodb/:rw
     ports:
       - "${MONGODB_HOST_PORT}:27017"
     restart: always
