--- a/docker-compose-node.yml
+++ b/docker-compose-node.yml
@@ -7,6 +7,7 @@ services:
       args:
         NGINX_VERSION: ${NGINX_VERSION}
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         TZ: ${TZ}
     ports:
       - "${NGINX_HTTP_HOST_PORT}:80"
@@ -53,6 +54,7 @@ services:
       context: nodejs
       args:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         NODEJS_VERSION: ${NODEJS_VERSION}
         TZ: ${TZ}
     ports:
