--- a/docker-compose-php.yml
+++ b/docker-compose-php.yml
@@ -7,6 +7,7 @@ services:
       args:
         NGINX_VERSION: ${NGINX_VERSION}
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         TZ: ${TZ}
     ports:
       - "${NGINX_HTTP_HOST_PORT}:80"
@@ -29,6 +30,8 @@ services:
       context: php
       args:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
         PHP_VERSION: ${PHP_VERSION}
         PHP_EXTENSIONS: ${PHP_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
@@ -106,6 +109,7 @@ services:
       args:
         REDIS_VERSION: ${REDIS_VERSION}
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         TZ: ${TZ}
     ports:
       - "${REDIS_HOST_PORT}:6379"
