--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -7,6 +7,7 @@ services:
       args:
         NGINX_VERSION: ${NGINX_VERSION}
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         TZ: ${TZ}
     ports:
       - "${NGINX_HTTP_HOST_PORT}:80"
@@ -29,6 +30,8 @@ services:
       context: php
       args:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
         PHP_VERSION: ${PHP_VERSION}
         PHP_EXTENSIONS: ${PHP_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
@@ -62,6 +65,8 @@ services:
       context: php7
       args:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
         PHP_VERSION: ${PHP7_VERSION}
         PHP_EXTENSIONS: ${PHP7_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP7_MORE_EXTENSION_INSTALLER}
@@ -141,6 +146,7 @@ services:
       args:
         REDIS_VERSION: ${REDIS_VERSION}
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         TZ: ${TZ}
     ports:
       - "${REDIS_HOST_PORT}:6379"
@@ -197,6 +203,7 @@ services:
       context: nodejs
       args:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
+        ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         NODEJS_VERSION: ${NODEJS_VERSION}
         TZ: ${TZ}
     ports:
