--- a/env.sample
+++ b/env.sample
@@ -10,6 +10,21 @@ CONF_PATH=./
 # 各个服务的log
 LOG_PATH=/app/log
 
+#################### ALPINE ####################
+#
+# Container package fetch url
+#
+# Can be empty, followings or others:
+# mirrors.163.com
+# mirrors.aliyun.com
+# mirrors.ustc.edu.cn
+#
+# Alpine Repositories
+ALPINE_REPOSITORIES_REPLACE=true
+ALPINE_REPOSITORIES=mirrors.aliyun.com
+
+#################### DEBIAN ####################
+DEBIAN_REPOSITORIES_REPLACE=true
 
 ############# Timezone for the containers ############
 TZ=Asia/Shanghai
@@ -17,7 +32,7 @@ TZ=Asia/Shanghai
 
 #################### Nginx #####################
 # nginx版本
-NGINX_VERSION=1.15.7-alpine
+NGINX_VERSION=1.17-alpine
 # 开放端口
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
@@ -39,18 +54,6 @@ NGINX_HTTPS_HOST_PORT=443
 # 对于此处未列出的其他扩展，您也可以安装
 # 需要去sh目录修改脚本
 #################### end ####################
-
-#################### PHP ####################
-#
-# Container package fetch url
-#
-# Can be empty, followings or others:
-# mirrors.163.com
-# mirrors.aliyun.com
-# mirrors.ustc.edu.cn
-#
-# Alpine Repositories
-ALPINE_REPOSITORIES=mirrors.aliyun.com
 
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
 # 如果你用swoole不需要php-fpm的话，可以使用7.3-cli-alpine，如果需要php-fpm则用7.3-fpm-alpine
