--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -3,6 +3,8 @@ FROM php:${PHP_VERSION}
 
 ARG TZ
 ARG ALPINE_REPOSITORIES
+ARG ALPINE_REPOSITORIES_REPLACE
+ARG DEBIAN_REPOSITORIES_REPLACE
 ARG PHP_EXTENSIONS
 ARG PHP_MORE_EXTENSION_INSTALLER
 ARG PHP_SWOOLE_VERSION
