--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -3,6 +3,7 @@ FROM redis:${REDIS_VERSION}
 
 ARG TZ
 ARG ALPINE_REPOSITORIES
+ARG ALPINE_REPOSITORIES_REPLACE
 
 RUN if [ "${ALPINE_REPOSITORIES_REPLACE}" = "true" ] ; then sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_REPOSITORIES}/g" /etc/apk/repositories ; else echo NO ; fi
 
